# tsp

./: .gitignore  Home.py  LICENSE.md  README.md  benchmark.py  pyproject.toml  tsp-answer.ipynb  tsp.ipynb  vrp.ipynb
data/: clients.csv  depots.csv  nl100.xlsx  nl5000.xlsx  orders_data.csv  vehicles.csv
instances/: instance_generator.py
instances/large/: instance_0.txt  instance_1.txt  instance_10.txt  instance_11.txt  instance_12.txt  instance_13.txt  instance_14.txt  instance_15.txt  instance_16.txt  instance_17.txt  instance_18.txt  instance_19.txt  instance_2.txt  instance_20.txt  instance_21.txt  instance_22.txt  instance_23.txt  instance_24.txt  instance_25.txt  instance_26.txt  instance_27.txt  instance_28.txt  instance_29.txt  instance_3.txt  instance_30.txt  instance_31.txt  instance_32.txt  instance_33.txt  instance_34.txt  instance_35.txt  instance_36.txt  instance_37.txt  instance_38.txt  instance_39.txt  instance_4.txt  instance_40.txt  instance_41.txt  instance_42.txt  instance_43.txt  instance_44.txt  (+60 more)
instances/medium/: instance_0.txt  instance_1.txt  instance_10.txt  instance_11.txt  instance_12.txt  instance_13.txt  instance_14.txt  instance_15.txt  instance_16.txt  instance_17.txt  instance_18.txt  instance_19.txt  instance_2.txt  instance_20.txt  instance_21.txt  instance_22.txt  instance_23.txt  instance_24.txt  instance_25.txt  instance_26.txt  instance_27.txt  instance_28.txt  (+78 more)
jobscripts/: benchmark.sh
pages/: 1_Orders.py  2_Map.py  3_Optimize.py
scripts/: make_jobscripts.py
tsp/: __init__.py  solve_alns.py  solve_lkh.py  solve_milp.py
(+106 files in other folders)
