[project]
name = "breinstein"
version = "0.1.0"
description = "Breinstein optimization."
authors = [
    { name = "Leon Lan", email = "leon.lanyidong@gmail.com"},
]
license = { text = "GPL-3 License" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "pyvrp==0.10.1",
    "streamlit>=1.44.1",
]


[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "jupyter>=1.0.0",
]


[tool.uv]
default-groups = ["dev"]


[tool.mypy]
ignore_missing_imports = true


[tool.black]
line-length = 79


[tool.ruff]
line-length = 79
extend-include = ["*.ipynb"]


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E741",  # ambiguous variable name, needed for indexing
    "C901",  # too complex
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # ignore unused module imports


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
